--- a/package.json
+++ b/package.json
@@ -16,7 +16,5 @@
     "url": "https://github.com/nperez0111/howWideIsIt/issues"
   },
   "homepage": "https://github.com/nperez0111/howWideIsIt#readme",
-  "dependencies": {
-    "memoize": "^0.1.1"
-  }
+  "dependencies": {}
 }
