--- a/package.json
+++ b/package.json
@@ -1,39 +1,44 @@
 {
-  "name": "how-wide-is-it-web",
-  "version": "0.0.0",
-  "dependencies": {
-    "how-wide-is-it": "^0.2.1",
-    "ractive": "^0.6.0"
-  },
-  "devDependencies": {
-    "browserify": "^6.2.0",
-    "grunt": "~0.4.1",
-    "grunt-browserify": "^3.1.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-sass": "~0.7.3",
-    "grunt-contrib-jshint": "~0.9.2",
-    "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-connect": "~0.7.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-htmlmin": "~0.2.0",
-    "grunt-wiredep": "^1.7.0",
-    "grunt-contrib-imagemin": "~0.7.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-rev": "~0.1.0",
-    "grunt-autoprefixer": "~0.7.2",
-    "grunt-usemin": "~2.1.0",
-    "grunt-mocha": "^0.4.11",
-    "grunt-newer": "~0.7.0",
-    "grunt-svgmin": "~0.4.0",
-    "grunt-concurrent": "~0.5.0",
-    "load-grunt-tasks": "~0.4.0",
-    "jshint-stylish": "~0.1.5",
-    "ractify": "^0.5.0",
-    "time-grunt": "~0.3.1"
-  },
-  "engines": {
-    "node": ">=0.10.0"
-  }
+    "name": "how-wide-is-it-web",
+    "version": "0.0.0",
+    "dependencies": {
+        "how-wide-is-it": "^0.2.1",
+        "ractive": "^0.7.3"
+    },
+    "devDependencies": {
+        "babel-preset-es2015": "^6.9.0",
+        "babelify": "^7.3.0",
+        "browserify": "^13.0.1",
+        "debowerify": "^1.5.0",
+        "grunt": "~1.0.1",
+        "grunt-autoprefixer": "~3.0.4",
+        "grunt-browserify": "^5.0.0",
+        "grunt-concurrent": "~2.3.0",
+        "grunt-contrib-clean": "~1.0.0",
+        "grunt-contrib-concat": "~1.0.1",
+        "grunt-contrib-connect": "^1.0.2",
+        "grunt-contrib-copy": "~1.0.0",
+        "grunt-contrib-cssmin": "~1.0.1",
+        "grunt-contrib-htmlmin": "~1.4.0",
+        "grunt-contrib-imagemin": "~1.0.1",
+        "grunt-contrib-jshint": "~1.0.0",
+        "grunt-contrib-sass": "~1.0.0",
+        "grunt-contrib-uglify": "~1.0.1",
+        "grunt-contrib-watch": "~1.0.0",
+        "grunt-mocha": "^1.0.2",
+        "grunt-newer": "~1.2.0",
+        "grunt-rev": "~0.1.0",
+        "grunt-svgmin": "~3.2.0",
+        "grunt-usemin": "~3.1.1",
+        "grunt-wiredep": "^3.0.1",
+        "jshint-stylish": "~2.2.0",
+        "load-grunt-tasks": "~3.5.0",
+        "path-to-regexp": "^1.5.3",
+        "ractify": "^0.6.0",
+        "serve-static": "^1.11.1",
+        "time-grunt": "~1.3.0"
+    },
+    "engines": {
+        "node": ">=0.10.0"
+    }
 }
